tarea/-test-ebs-csi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
  - name: app
    image: centos
    command: ["/bin/sh"]
    # Cuando se inicie se iniciará una shell de bash
    # con -c comando 
    # while true bucle infinito
    # do de u necho de la fecha en utc que se añade  a /data/out.txt con >>
    # esperar 15 segundos
    # repetir
    args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 15; done"]
    volumeMounts:
    - name: persistent-storage
      mountPath: /data
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: ebs-claim
