tarea/ejemplo-servicio.yaml
apiVersion: v1
kind: Service
metadata:
  name: ejemplo-servicio
spec:
  selector:
    app: ejemplo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
