tarea/test-app-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: nginx #hello-app # nginx
        image: nginx:latest #grc.io/google-samples/hello-app:1.0 #nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  selector:
    app: test-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing #internal #internet-facing
    #Choose internal to create an internal load balancer, or internet-facing 
    # to create a public load balancer
    alb.ingress.kubernetes.io/subnets: public_subnet_1, public_subnet_2
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app-service
            port: 
              number: 80
